--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Zalup1nJB</title>
+    <title>Nice JailBreak</title>
     <style>
          @font-face {
             font-family: 'MontserratAlternates-Bold';
